--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,20 @@ main #board {
     main #board .rowLocker .colLocker {
       padding: 0;
       border: 1px solid black;
-      width: 50px;
-      height: 50px; }
+      width: 40px;
+      height: 40px; }
+    main #board .rowLocker .blackLocker {
+      background-color: black; }
+    main #board .rowLocker .gridMapRow {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center; }
+    main #board .rowLocker .gridMapCol {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end; }
 
 /* form {
     .button {
