--- a/scss/app.scss
+++ b/scss/app.scss
@@ -13,6 +13,7 @@ header {
     }
 }
 
+
 main {
     #board {
         padding: 1rem;
@@ -23,12 +24,28 @@ main {
             .colLocker {
                 padding: 0;
                 border: 1px solid black;
-                width: 50px;
-                height: 50px;
+                width: 40px;
+                height: 40px;
+            }
+            .blackLocker {
+                background-color: black;
+            }
+            .gridMapRow {
+                width: 40px;
+                height: 40px;
+                display: flex;
+                align-items: flex-start;
+                justify-content: center;
+            }
+            .gridMapCol {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
             }
         }
     }
 }
+
 
 
 
