--- a/stylesheets/registro.scss
+++ b/stylesheets/registro.scss
@@ -266,7 +266,7 @@
     .btnEnviar {
         margin: 2rem auto 3rem;
     }
-    #staticBackdrop {
+    #modalRegistro {
         .modal-content {
             background-color: map-get($colors, Secondary);
             .modal-header {
