--- a/css/main.css
+++ b/css/main.css
@@ -633,5 +633,21 @@ ul {
 #board {
   background-color: #434343; }
 
-.d-none {
+.d-on {
+  display: block; }
+
+.d-off {
   display: none; }
+
+#Tablero {
+  width: 420px;
+  height: 420px;
+  border: 2px solid #434343; }
+  #Tablero div {
+    width: 52px;
+    height: 52px;
+    float: left;
+    padding: 5px; }
+    #Tablero div img {
+      width: 100%;
+      height: 100%; }
