--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,198 +1,223 @@
-@import 'stylesheets/colors.scss';
-@import 'stylesheets/fonts.scss';
-@import 'stylesheets/mixins.scss';
-@import 'stylesheets/header.scss';
-@import 'stylesheets/footer.scss';
-@import 'stylesheets/login.scss';
-@import 'stylesheets/registro.scss';
-@import 'stylesheets/tablero.scss';
+@import "stylesheets/colors.scss";
+@import "stylesheets/fonts.scss";
+@import "stylesheets/mixins.scss";
+@import "stylesheets/header.scss";
+@import "stylesheets/footer.scss";
+@import "stylesheets/login.scss";
+@import "stylesheets/registro.scss";
+@import "stylesheets/tablero.scss";
 
 // ------------------------  General rules   ------------------
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    // border: 1px solid slateblue;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	// border: 1px solid slateblue;
 }
-
 
 h1,
 h2,
 h3,
 h4 {
-    font-family: $title-font;
-    font-size: 40px;
-    color: map-get($colors, Quaternary);
-    margin: 0;
-    padding: 0;
+	font-family: $title-font;
+	font-size: 40px;
+	color: map-get($colors, Quaternary);
+	margin: 0;
+	padding: 0;
 }
 
 a {
-    font-family: $menu-font;
-    font-size: 1.7rem;
-    text-decoration: none;
-    color: map-get($colors, Quaternary);
-    &:hover {
-        font-weight: bold;
-        color: map-get($colors, Quaternary);
-    }
-    &:visited {
-        color: map-get($colors, Quaternary);
-    }
+	font-family: $menu-font;
+	font-size: 1.7rem;
+	text-decoration: none;
+	color: map-get($colors, Quaternary);
+	&:hover {
+		font-weight: bold;
+		color: map-get($colors, Quaternary);
+	}
+	&:visited {
+		color: map-get($colors, Quaternary);
+	}
 }
 
 p,
 li,
 span,
 legend {
-    font-family: $text-font;
-    color: map-get($colors, Quaternary);
-    font-size: 1rem;
+	font-family: $text-font;
+	color: map-get($colors, Quaternary);
+	font-size: 1rem;
 }
 
 hr {
-    width: 92%;
-    margin: 0 auto 1rem;
-    color: #fff;
-    border: 1px solid;
+	width: 92%;
+	margin: 0 auto 1rem;
+	color: #fff;
+	border: 1px solid;
 }
 
 img,
 .card {
-    border-radius: 10px;
-    border: 0px;
+	border-radius: 10px;
+	border: 0px;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
+	list-style-type: none;
+	padding: 0;
 }
 
 // ----------------------  Boton play  ---------------
 .play {
-    margin: 1rem auto;
-    width: max-content;
-    position: relative;
-    border: none;
-    background: transparent;
-    padding: 0;
-    cursor: pointer;
-    outline-offset: 4px;
-    transition: filter 250ms;
-    user-select: none;
-    touch-action: manipulation;
-    &:hover {
-        filter: brightness(110%);
-        .front {
-            transform: translateY(-6px);
-            transition: transform 250ms cubic-bezier(.3, .7, .4, 1.5);
-        }
-        .shadow {
-            transform: translateY(4px);
-            transition: transform 250ms cubic-bezier(.3, .7, .4, 1.5);
-        }
-    }
-    &:active {
-        .front {
-            transform: translateY(-2px);
-            transition: transform 34ms;
-        }
-        .shadow {
-            transform: translateY(1px);
-            transition: transform 34ms;
-        }
-    }
-    &:focus:not(:focus-visible) {
-        outline: none;
-    }
-    .shadow {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 12px;
-        background: #26242440;
-        will-change: transform;
-        transform: translateY(2px);
-        transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
-    }
-    .edge {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 12px;
-        background: linear-gradient(45deg, rgba(36,35,35,1) 0%, rgba(86,152,180,1) 50%, rgba(64,64,64,1) 100%);
-    }
-    .front {
-        display: block;
-        position: relative;
-        padding: 8px 8px;
-        border-radius: 12px;
-        background: map-get($colors, Primary);
-        will-change: transform;
-        transform: translateY(-4px);
-        transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
-    }
+	margin: 1rem auto;
+	width: max-content;
+	position: relative;
+	border: none;
+	background: transparent;
+	padding: 0;
+	cursor: pointer;
+	outline-offset: 4px;
+	transition: filter 250ms;
+	user-select: none;
+	touch-action: manipulation;
+	&:hover {
+		filter: brightness(110%);
+		.front {
+			transform: translateY(-6px);
+			transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+		}
+		.shadow {
+			transform: translateY(4px);
+			transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
+		}
+	}
+	&:active {
+		.front {
+			transform: translateY(-2px);
+			transition: transform 34ms;
+		}
+		.shadow {
+			transform: translateY(1px);
+			transition: transform 34ms;
+		}
+	}
+	&:focus:not(:focus-visible) {
+		outline: none;
+	}
+	.shadow {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 12px;
+		background: #26242440;
+		will-change: transform;
+		transform: translateY(2px);
+		transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+	}
+	.edge {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 12px;
+		background: linear-gradient(
+			45deg,
+			rgba(36, 35, 35, 1) 0%,
+			rgba(86, 152, 180, 1) 50%,
+			rgba(64, 64, 64, 1) 100%
+		);
+	}
+	.front {
+		display: block;
+		position: relative;
+		padding: 8px 8px;
+		border-radius: 12px;
+		background: map-get($colors, Primary);
+		will-change: transform;
+		transform: translateY(-4px);
+		transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
+	}
 }
-
 
 // -------------------------  Boton Enviar    ----------------
 .btnEnviar {
-    font-family: inherit;
-    width: 110px;
-    background: map-get($colors, Primary);
-    color: map-get($colors, Quaternary);
-    padding: 0.4rem 1rem;
-    padding-left: 0.9em;
-    display: flex;
-    align-items: center;
-    border: none;
-    border-radius: 1rem;
-    overflow: hidden;
-    transition: all 0.2s;
-    span {
-        display: block;
-        margin-left: 0.3rem;
-        transition: all 0.3s ease-in-out;
-        font-size: 1.3rem;
-    }
-    svg {
-        display: block;
-        transform-origin: center center;
-        transition: transform 0.3s ease-in-out;
-    }
-    &:hover {
-        .svg-wrapper {
-            animation: fly-1 0.6s ease-in-out infinite alternate;
-        }
-        svg {
-            transform: translateX(1.5em) rotate(45deg) scale(1.1);
-        }
-        span {
-            transform: translateX(5em);
-        }
-    }
-    &:active {
-        transform: scale(0.95);
-    }
+	font-family: inherit;
+	width: 110px;
+	background: map-get($colors, Primary);
+	color: map-get($colors, Quaternary);
+	padding: 0.4rem 1rem;
+	padding-left: 0.9em;
+	display: flex;
+	align-items: center;
+	border: none;
+	border-radius: 1rem;
+	overflow: hidden;
+	transition: all 0.2s;
+	span {
+		display: block;
+		margin-left: 0.3rem;
+		transition: all 0.3s ease-in-out;
+		font-size: 1.3rem;
+	}
+	svg {
+		display: block;
+		transform-origin: center center;
+		transition: transform 0.3s ease-in-out;
+	}
+	&:hover {
+		.svg-wrapper {
+			animation: fly-1 0.6s ease-in-out infinite alternate;
+		}
+		svg {
+			transform: translateX(1.5em) rotate(45deg) scale(1.1);
+		}
+		span {
+			transform: translateX(5em);
+		}
+	}
+	&:active {
+		transform: scale(0.95);
+	}
 }
 
 @keyframes fly-1 {
-    from {
-    transform: translateY(0.1em);
-    }
-    to {
-    transform: translateY(-0.1em);
-    }
+	from {
+		transform: translateY(0.1em);
+	}
+	to {
+		transform: translateY(-0.1em);
+	}
 }
 
 #board {
-background-color: #434343;
+	background-color: #434343;
 }
 
-.d-none {
-    display: none;
+.d-on {
+	display: block;
 }
+
+.d-off {
+	display: none;
+}
+
+#Tablero {
+	width: 420px;
+	height: 420px;
+	border: 2px solid #434343;
+    div {
+        width: 52px;
+        height: 52px;
+        float: left;
+        padding: 5px;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+
